compiler/compiler/tests/language/negative/oopSurfaceRoleCapability/visibility/internalConformanceOutsidePackage.qn
pub externalAccess(route: PublicRouteCarrier) -> i64 {
  return route.impl.internalRouteValue()
}
